--- a/package.json
+++ b/package.json
@@ -47,6 +47,9 @@
 		"hint",
 		"simple"
 	],
+	"dependencies": {
+		"tslint-eslint-rules": "^4.1.1"
+	},
 	"devDependencies": {
 		"ava": "*",
 		"tslint": "^5.8.0",
