--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
 		"simple"
 	],
 	"dependencies": {
+		"tslint-consistent-codestyle": "^1.8.0",
 		"tslint-eslint-rules": "^4.1.1"
 	},
 	"devDependencies": {
