--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
 	],
 	"dependencies": {
 		"tslint-consistent-codestyle": "^1.8.0",
-		"tslint-eslint-rules": "^4.1.1"
+		"tslint-eslint-rules": "^4.1.1",
+		"tslint-microsoft-contrib": "^5.0.1"
 	},
 	"devDependencies": {
 		"ava": "*",
