--- a/package.json
+++ b/package.json
@@ -48,15 +48,15 @@
 		"simple"
 	],
 	"dependencies": {
-		"tslint-consistent-codestyle": "^1.11.0",
-		"tslint-eslint-rules": "^5.3.1",
-		"tslint-microsoft-contrib": "^5.0.2"
+		"tslint-consistent-codestyle": "^1.14.1",
+		"tslint-eslint-rules": "^5.4.0",
+		"tslint-microsoft-contrib": "^5.2.1"
 	},
 	"devDependencies": {
-		"ava": "*",
+		"ava": "^0.25.0",
 		"tslint": "^5.11.0",
-		"typescript": "^2.8.3",
-		"xo": "*"
+		"typescript": "^3.1.6",
+		"xo": "^0.23.0"
 	},
 	"peerDependencies": {
 		"tslint": ">=5.11.0"
